Added script to access fontawesome icons

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" src="./manifest.json">
     <link rel="shortcut icon" src="./favicon.ico">
+    <script src="https://kit.fontawesome.com/3d06e5cf44.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
