--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,8 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" src="./manifest.json">
-    <link rel="shortcut icon" src="./favicon.ico">
+    <link rel="manifest" src="%PUBLIC_URL%manifest.json">
+    <link rel="shortcut icon" src="%PUBLIC_URL%favicon.ico">
     <script src="https://kit.fontawesome.com/3d06e5cf44.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
